@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

title Domain Model - US005

skinparam classAttributeIconSize 0

left to right direction

hide circles
hide methods

package "HRM System" {
    class HRM {
    }

    class Team {
        minTeamSize
        maxTeamSize
    }

    class Collaborator {
        name
        birthdate
        admissionDate
        address
        phoneNumber
        email
        taxpayerNumber
        id_doc_type
        id_doc_number
    }

    class Skill {
        name
    }


    HRM "1  " -- "1 " Team : generates >
    Team "1 " -- "1..*" Collaborator : assigned <
    Collaborator "1" -- "*" Skill : has >
}
@enduml
